--- a/src/Roslyn.TextUtilities/Roslyn.TextUtilities.csproj
+++ b/src/Roslyn.TextUtilities/Roslyn.TextUtilities.csproj
@@ -71,6 +71,11 @@
     <Compile Include="Text\TextStream.cs" />
     <Compile Include="Text\TextUtilities.cs" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="PublicAPI.Shipped.txt" />
+    <Content Include="PublicAPI.Unshipped.txt" />
+  </ItemGroup>
   
   <ItemGroup>
     <None Include="ArrayBuilder.cs" />
